# ChangeLog for media-gfx/graphviz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.194 2009/05/19 12:07:44 pva Exp $

  19 May 2009; Peter Volkov <pva@gentoo.org> graphviz-2.22.2-r1.ebuild:
  Fixed broken build caused by inability to use system ltdl reported by
  Michael Pontus in bug #265859.

  12 May 2009; Jeroen Roovers <jer@gentoo.org> graphviz-2.22.2-r1.ebuild:
  Marked ~hppa (bug #265013).

  20 Apr 2009; Markus Meier <maekke@gentoo.org> graphviz-2.22.1,
  graphviz-2.22.2, graphviz-2.22.2-r1:
  drop unused gnome USE-flag by Rafał Mużyło in bug #266145

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  graphviz-2.22.2-r1.ebuild:
  Keyworded on alpha, bug #265013

  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> graphviz-2.22.2-r1.ebuild:
  Re-add ~ia64 wrt #265013

*graphviz-2.22.2-r1 (05 Apr 2009)

  05 Apr 2009; Markus Meier <maekke@gentoo.org> metadata.xml,
  graphviz-2.22.1.ebuild, graphviz-2.22.2.ebuild,
  +graphviz-2.22.2-r1.ebuild:
  disable automagic media-libs/lasi dep, create a new revision with lasi
  USE-flag, bug #264362

*graphviz-2.22.2 (19 Mar 2009)

  19 Mar 2009; Markus Meier <maekke@gentoo.org> +graphviz-2.22.2.ebuild:
  version bump

  12 Mar 2009; Markus Meier <maekke@gentoo.org> -graphviz-2.22.0.ebuild,
  graphviz-2.22.1.ebuild:
  remove cgraph USE-flag as it is not ready yet according to upstream, bug
  #261658; remove old

*graphviz-2.22.1 (11 Mar 2009)

  11 Mar 2009; Markus Meier <maekke@gentoo.org> +graphviz-2.22.1.ebuild:
  bump to 2.22.1, should fix bug #261885

*graphviz-2.22.0 (07 Mar 2009)

  07 Mar 2009; Markus Meier <maekke@gentoo.org> +graphviz-2.22.0.ebuild:
  version bump, bug #261543

  07 Feb 2009; Markus Meier <maekke@gentoo.org> graphviz-2.20.3.ebuild:
  make graphviz with tcl support work with >=dev-lang/swig-1.3.38 wrt bug
  #257856

  23 Dec 2008; Markus Meier <maekke@gentoo.org>
  -files/graphviz-2.16.1-bindings.patch,